--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <a href="##">label2</a>
                     <a href="###">label3</a>
                 </div>  
-              <img src="img/weather.png" alt="firefox" onclick="window.location.href = 'blogs/weather/weather.html'">   
-              <div class="card_content" onclick="window.location.href = 'blogs/weather/weather.html'" >
+              <img src="img/weather.png" alt="firefox" onclick="window.location.href = 'weather widget/weather.html'">   
+              <div class="card_content" onclick="window.location.href = 'weather widget/weather.htlm'" >
                   <h2 class="card_title">Weather widget</h2>
               </div>
           </div>
@@ -32,8 +32,8 @@
                 <a href="##">label2</a>
                 <a href="###">label3</a>
             </div>
-            <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'projects/jsclock/clock.html'">   
-            <div class="card_content" onclick="window.location.href = 'projects/jsclock/clock.html'" >
+            <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'clock/clock.html'">   
+            <div class="card_content" onclick="window.location.href = 'clock/clock.html'" >
               <h2 class="card_title">JS Clock</h2>
             </div>
           </div>
@@ -44,8 +44,8 @@
                 <a href="##">label2</a>
                 <a href="###">label3</a>
             </div>
-              <img src="img/log.png" alt="firefox" onclick="window.location.href = 'blogs/login/login.html'">
-              <div class="card_content" onclick="window.location.href = 'blogs/login/login.html'">
+              <img src="img/log.png" alt="firefox" onclick="window.location.href = 'login form design/tabbed login form.html'">
+              <div class="card_content" onclick="window.location.href = 'login form design/tabbed login form.html'">
                   <h2 class="card_title">Login / Signup page</h2> 
               </div>
           </div>
@@ -56,13 +56,13 @@
                 <a href="##">label2</a>
                 <a href="###">label3</a>
             </div>
-              <img src="img/glow.png" alt="firefox" onclick="window.location.href = 'https://coderati.blogspot.com/2022/08/lets-glow-description-this-design-was.html'">
-              <div class="card_content" onclick="window.location.href = 'https://coderati.blogspot.com/2022/08/lets-glow-description-this-design-was.html'">
+              <img src="img/glow.png" alt="firefox" onclick="window.location.href = 'button/glowing button/glowing button.html'">
+              <div class="card_content" onclick="window.location.href = 'button/glowing button/glowing button.html'">
                   <h2 class="card_title">Glowing effect on button</h2> 
               </div>
           </div>
 
-          <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
+          <!-- <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
             <div class="labels">
                 <a href="#">label1</a>
                 <a href="##">label2</a>
@@ -84,7 +84,7 @@
               <div class="card_content" onclick="window.location.href = 'blogs/test.html'">
                   <h2 class="card_title">Demo 2</h2>
               </div>
-          </div>
+          </div> -->
       </div>
     </div>
  
