Adding stopwatch element in index.html

--- a/index.html
+++ b/index.html
@@ -15,23 +15,13 @@
     <div class="container">
       <div class="product_grid">
           <div class="card stacked featured" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-                <div class="labels">
-                    <a href="#">label1</a>
-                    <a href="##">label2</a>
-                    <a href="###">label3</a>
-                </div>  
               <img src="img/weather.png" alt="firefox" onclick="window.location.href = 'weather widget/weather.html'">   
-              <div class="card_content" onclick="window.location.href = 'weather widget/weather.htlm'" >
+              <div class="card_content" onclick="window.location.href = 'weather widget/weather.html'" >
                   <h2 class="card_title">Weather widget</h2>
               </div>
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <div class="labels">
-                <a href="#">label1</a>
-                <a href="##">label2</a>
-                <a href="###">label3</a>
-            </div>
             <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'clock/clock.html'">   
             <div class="card_content" onclick="window.location.href = 'clock/clock.html'" >
               <h2 class="card_title">JS Clock</h2>
@@ -39,11 +29,6 @@
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <div class="labels">
-                <a href="#">label1</a>
-                <a href="##">label2</a>
-                <a href="###">label3</a>
-            </div>
               <img src="img/log.png" alt="firefox" onclick="window.location.href = 'login form design/tabbed login form.html'">
               <div class="card_content" onclick="window.location.href = 'login form design/tabbed login form.html'">
                   <h2 class="card_title">Login / Signup page</h2> 
@@ -51,14 +36,16 @@
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <div class="labels">
-                <a href="#">label1</a>
-                <a href="##">label2</a>
-                <a href="###">label3</a>
-            </div>
               <img src="img/glow.png" alt="firefox" onclick="window.location.href = 'button/glowing button/glowing button.html'">
               <div class="card_content" onclick="window.location.href = 'button/glowing button/glowing button.html'">
                   <h2 class="card_title">Glowing effect on button</h2> 
+              </div>
+          </div>
+
+          <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
+              <img src="img/stopwatch.png" alt="firefox" onclick="window.location.href = 'js stopwatch/stopwatch.html'">
+              <div class="card_content" onclick="window.location.href = 'js stopwatch/stopwatch.html'">
+                  <h2 class="card_title">Stopwatch</h2>
               </div>
           </div>
 
@@ -68,19 +55,7 @@
                 <a href="##">label2</a>
                 <a href="###">label3</a>
             </div>
-              <img src="img/a.png" alt="firefox" onclick="window.location.href = 'blogs/test.html'">
-              <div class="card_content" onclick="window.location.href = 'blogs/test.html'">
-                  <h2 class="card_title">Demo 1</h2>
-              </div>
-          </div>
-
-          <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <div class="labels">
-                <a href="#">label1</a>
-                <a href="##">label2</a>
-                <a href="###">label3</a>
-            </div>
-              <img src="img/b.png" alt="firefox" onclick="window.location.href = 'blogs/test.html'">
+              <img src="" alt="firefox" onclick="window.location.href = 'blogs/test.html'">
               <div class="card_content" onclick="window.location.href = 'blogs/test.html'">
                   <h2 class="card_title">Demo 2</h2>
               </div>
