--- a/index.html
+++ b/index.html
@@ -15,51 +15,48 @@
     <div class="container">
       <div class="product_grid">
           <div class="card stacked featured" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-              <img src="img/weather.png" alt="firefox" onclick="window.location.href = 'weather widget/weather.html'">   
+              <img src="img/weather.png" alt="weather widget" onclick="window.location.href = 'weather widget/weather.html'">   
               <div class="card_content" onclick="window.location.href = 'weather widget/weather.html'" >
                   <h2 class="card_title">Weather widget</h2>
               </div>
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'clock/clock.html'">   
+            <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'clock/clock.html'">    
             <div class="card_content" onclick="window.location.href = 'clock/clock.html'" >
               <h2 class="card_title">JS Clock</h2>
             </div>
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-              <img src="img/log.png" alt="firefox" onclick="window.location.href = 'login form design/tabbed login form.html'">
+              <img src="img/log.png" alt="a login page which has tabs for login and signin section" onclick="window.location.href = 'login form design/tabbed login form.html'">
               <div class="card_content" onclick="window.location.href = 'login form design/tabbed login form.html'">
                   <h2 class="card_title">Login / Signup page</h2> 
               </div>
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-              <img src="img/glow.png" alt="firefox" onclick="window.location.href = 'button/glowing button/glowing button.html'">
+              <img src="img/glow.png" alt="css glow animation on button" onclick="window.location.href = 'button/glowing button/glowing button.html'">
               <div class="card_content" onclick="window.location.href = 'button/glowing button/glowing button.html'">
                   <h2 class="card_title">Glowing effect on button</h2> 
               </div>
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-              <img src="img/stopwatch.png" alt="firefox" onclick="window.location.href = 'js stopwatch/stopwatch.html'">
+              <img src="img/stopwatch.png" alt="basic stopwatch using JavaScript" onclick="window.location.href = 'js stopwatch/stopwatch.html'">
               <div class="card_content" onclick="window.location.href = 'js stopwatch/stopwatch.html'">
                   <h2 class="card_title">Stopwatch</h2>
               </div>
           </div>
 
-          <!-- <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
-            <div class="labels">
-                <a href="#">label1</a>
-                <a href="##">label2</a>
-                <a href="###">label3</a>
+          <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
+            <img src="img/square_window_animation.png" alt="Square window loading animation" onclick="window.location.href = 'Loading animation/square window/square window loading animation.html'">
+            <div class="card_content" onclick="window.location.href = 'Loading animation/square window/square window loading animation.html'">
+                <h2 class="card_title">Square window animation</h2>
             </div>
-              <img src="" alt="firefox" onclick="window.location.href = 'blogs/test.html'">
-              <div class="card_content" onclick="window.location.href = 'blogs/test.html'">
-                  <h2 class="card_title">Demo 2</h2>
-              </div>
-          </div> -->
+        </div>
+
+
       </div>
     </div>
  
