Adding password generator

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
           </div>
 
           <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
+            <img src="img/password_generator.png" alt="clock using html css and js" onclick="window.location.href = 'password generator/password_generator.html'">    
+            <div class="card_content" onclick="window.location.href = 'password generator/password_generator.html'" >
+              <h2 class="card_title">Password Generator</h2>
+            </div>
+          </div>
+
+          <div class="card stacked" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
             <img src="img/clock.png" alt="clock using html css and js" onclick="window.location.href = 'clock/clock.html'">    
             <div class="card_content" onclick="window.location.href = 'clock/clock.html'" >
               <h2 class="card_title">JS Clock</h2>
