--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-      <h1>Frontendo</h1>
+      <h1>CSS Designs</h1>
       <!-- <span id="label_section">Label</span> -->
-    </header>
-    <h1 id="site_name">Frontendo</h1>
+    </header><br>
+    <h1 id="site_name">CSS Designs</h1>
     <div class="container">
       <div class="product_grid">
           <div class="card stacked featured" onmousemove="zoomIn(event)" onmouseout="zoomOut()">
@@ -94,9 +94,8 @@
   var image = card.querySelector('img');
   image.style.transform = 'none';
 }
+
 </script>
  
 </body>
 </html> 
-
-
